# hbf

./: BFRunner.hs  BrainFuckDSL.hs  BrainFuckDSL_back.hs  BrainFuckInterpreter.hs  DSL.hs  DSLClient.hs  DSLRunner.hs  FreeInterpreter.hs  IOInterpreter.hs  Interpreter.hs  NestedStructure.hs  Parser.hs  README.md  StringInterpreter.hs  Test.hs  Types.hs  Utils.hs  hbf.cabal
Control/Monad/: InOutMonad.hs
DSL/: Compiler.hs  Compiler2.hs  Interpreter.hs  Lib.hs  MainAST.hs  MemoryAST.hs  MemoryManager.hs  PrettyPrinter.hs
DSL/AST/: Base.hs  Memory.hs
Utils/: Free.hs
src/: DSL.hs  DSLCont.hs  DSLRunner.hs  Parser.hs  Types.hs
src/Control/Monad/: InOutMonad.hs
src/Control/Monad/Free/: Instances.hs
src/DSL/: Expression.hs  Lib.hs  MemoryManager.hs
src/DSL/AST/: Base.hs  Memory.hs
src/DSL/Lib/: Arithmetics.hs  Array.hs  Core.hs  EncodeString.hs  IO.hs
src/Utils/: NestedStructure.hs
test/: Test.hs
